# BillionSupermarket

./: .gitignore  README.md  pom.xml
billion-common/: pom.xml
billion-common/src/main/java/com/billion/constant/: AutoFillConstant.java  JwtClaimsConstant.java  MessageConstant.java  PasswordConstant.java  StatusConstant.java
billion-common/src/main/java/com/billion/context/: BaseContext.java
billion-common/src/main/java/com/billion/enumeration/: OperationType.java
billion-common/src/main/java/com/billion/exception/: AccountLockedException.java  AccountNotFoundException.java  AddressBookBusinessException.java  BaseException.java  DeletionNotAllowedException.java  LoginFailedException.java  OrderBusinessException.java  PasswordEditFailedException.java  PasswordErrorException.java  SetmealEnableFailedException.java  ShoppingCartBusinessException.java  UserNotLoginException.java
billion-pojo/: pom.xml
billion-server/: pom.xml
billion-server/src/main/java/com/billion/: BillionApplication.java
billion-server/src/main/resources/: application-dev.yml  application.yml
billion-server/src/main/resources/mapper/: AddressBookMapper.xml  CategoryMapper.xml  DishFlavorMapper.xml  DishMapper.xml  EmployeeMapper.xml  OrderDetailMapper.xml  OrderMapper.xml  SetmealDishMapper.xml  SetmealMapper.xml  ShoppingCartMapper.xml  UserMapper.xml
preparations/database/: billion.sql
preparations/frontend/nginx-1.20.2/conf/: nginx.conf
preparations/recommendation/: export.py  pyproject.toml
preparations/recommendation/architecture/: configuration.py  modeling.py
(+140 files in other folders)
